# rust-fuzzy-search

./: Cargo.toml  README.md  TODO  test2.sqlite  test3.sqlite
examples/: main.rs
examples/.fuzzy/: documents.csv  hits.csv  words.csv
examples/python/: automata.py  test.py
examples/text/: 1.txt  2.txt  3.txt
src/: lib.rs
src/db/: db.rs  mod.rs  models.rs
src/index/: clustering.rs  file.rs  frequency.rs  index.rs  mod.rs
src/models/: cluster.rs  cluster_link.rs  document.rs  hit.rs  mod.rs  word.rs
src/util/: distance.rs  hash.rs  mod.rs  stop_words.rs  string.rs
tests/: index.rs
