[package]
name = "fuzzy"
version = "0.1.0"
authors = ["paulnispel <pnispel@gmail.com>"]

[lib]
name       = "fuzzy"
path       = "src/lib.rs"

[dependencies.regex]
version = "0.1.41"

[dependencies.rust-sqlite]
git = "https://github.com/pnispel/rust-sqlite3.git"

[dependencies.time]
version = "0.1"

[dependencies.csv]
version = "0.14"

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.lazy_static]
git = "https://github.com/Kimundi/lazy-static.rs"

[dependencies.automata]
git = "https://github.com/pnispel/rust-automata.git"
